osd/scrub: check reservation replies for relevance

Compare epoch carried in the reservation reply with the remembered
epoch of the reservation request.  If they don't match, the reply is
stale and should be ignored (and logged).

Fixes: https://tracker.ceph.com/issues/64052 (partial fix)

Signed-off-by: Ronen Friedman <rfriedma@redhat.com>
(cherry picked from commit 89294e5bc6134a03544c00de5f00ddc9ad2310d5)