src/osd/scrubber/scrub_reservations.h
@@ -64,6 +64,11 @@ class ReplicaReservations {
   /// for logs, and for detecting slow peers
   ScrubTimePoint m_last_request_sent_at;
 
+  /// the epoch of the last reservation request sent. All responses
+  /// received will be checked against this epoch, to detect stale responses.
+  /// (note: see tracker.ceph.com/issues/64052 for details)
+  epoch_t m_last_request_sent_epoch;
+
   /// the 'slow response' timeout (in milliseconds) - as configured.
   /// Doubles as a 'do once' flag for the warning.
   std::chrono::milliseconds m_slow_response_warn_timeout;
@@ -93,15 +98,19 @@ class ReplicaReservations {
   bool handle_reserve_grant(OpRequestRef op, pg_shard_t from);
 
   /**
+   * React to an incoming reservation rejection.
+   *
    * Verify that the sender of the received rejection is the replica we
-   * were expecting a reply from.
-   * If this is so - just mark the fact that the specific peer need not
-   * be released.
+   * were expecting a reply from, and that the message isn't stale.
+   * If a real rejection: log it, and mark the fact that the specific peer
+   * need not be released.
    *
    * Note - the actual handling of scrub session termination and of
    * releasing the reserved replicas is done by the caller (the FSM).
+   *
+   * Returns true if the rejection is valid, false otherwise.
    */
-  void verify_rejections_source(OpRequestRef op, pg_shard_t from);
+  bool handle_rejection(OpRequestRef op, pg_shard_t from);
 
   /**
    * Notifies implementation that it is no longer responsible for releasing
@@ -139,6 +148,16 @@ class ReplicaReservations {
    * - if there are no more replicas to send requests to, return true
    */
   bool send_next_reservation_or_complete();
+
+  /// (internal helper) is this is a reply to our last request?
+  tl::expected<bool, std::string> is_response_relevant(
+      epoch_t msg_epoch,
+      pg_shard_t from) const;
+
+  /// (internal helper) is this reply coming from the expected replica?
+  tl::expected<bool, std::string> is_msg_source_correct(
+      epoch_t msg_epoch,
+      pg_shard_t from) const;
 
   // ---   perf counters helpers
 
